--- a/tff/tools/index.html
+++ b/tff/tools/index.html
@@ -32,6 +32,10 @@ crossorigin>
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="tff.tools.helpers" href="helpers.html">tff.tools.helpers</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="tff.tools.myspacy" href="myspacy.html">tff.tools.myspacy</a></code></dt>
 <dd>
 <div class="desc"><p>Get words and tokens from a plain text with the help of Spacy …</p></div>
@@ -113,6 +117,7 @@ setTimeout(() => input.focus(), 100);
 </li>
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="tff.tools.helpers" href="helpers.html">tff.tools.helpers</a></code></li>
 <li><code><a title="tff.tools.myspacy" href="myspacy.html">tff.tools.myspacy</a></code></li>
 <li><code><a title="tff.tools.xmlschema" href="xmlschema.html">tff.tools.xmlschema</a></code></li>
 </ul>
