--- a/tff/tools/xmlschema.html
+++ b/tff/tools/xmlschema.html
@@ -107,7 +107,7 @@ good = A.task(&quot;validate&quot;, &quot;schema.rng&quot;, &quot;doc1.xml&quot;
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L1-L1135" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L1-L1141" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 ## Meaningful information from XML schemas.
@@ -224,6 +224,8 @@ import re
 from tf.capable import CheckImport
 from tf.core.helpers import console, run
 from tf.core.files import fileOpen, fileExists, fileNm, dirNm, abspath
+
+from .helpers import runx
 
 
 class Elements(CheckImport):
@@ -928,16 +930,20 @@ class Analysis(CheckImport):
                 console(&#34;&#34;)
 
         elif mode is True:
-            instancesRep = &#34; &#34;.join(f&#39;&#34;{instance}&#34;&#39; for instance in instances)
-            (good, returnCode, stdOut, stdErr) = run(
-                f&#34;&#34;&#34;java -jar {jing} -t &#34;{schema}&#34; {instancesRep}&#34;&#34;&#34;,
+            (good, returnCode, stdOut, stdErr) = runx(
+                [&#34;java&#34;, &#34;-jar&#34;, jing, &#34;-t&#34;, schema, *instances],
                 workDir=None,
             )
+            console(f&#34;VALIDATION RESULT {good=} {returnCode=}&#34;)
+
             if not good:
                 if returnCode != 1:
                     severeError = True
 
             outputLines = (stdOut + stdErr).strip().split(&#34;\n&#34;)
+
+            for line in outputLines:
+                console(line)
 
         if severeError:
             return (-1, stdOut.strip().split(&#34;\n&#34;), stdErr.strip().split(&#34;\n&#34;))
@@ -1261,7 +1267,7 @@ if __name__ == &#34;__main__&#34;:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L1129-L1131" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L1135-L1137" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def main():
     A = Analysis()
@@ -1290,7 +1296,7 @@ In debug mode more information is shown on the console.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L621-L1126" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L623-L1132" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class Analysis(CheckImport):
     @staticmethod
@@ -1491,16 +1497,20 @@ In debug mode more information is shown on the console.</dd>
                 console(&#34;&#34;)
 
         elif mode is True:
-            instancesRep = &#34; &#34;.join(f&#39;&#34;{instance}&#34;&#39; for instance in instances)
-            (good, returnCode, stdOut, stdErr) = run(
-                f&#34;&#34;&#34;java -jar {jing} -t &#34;{schema}&#34; {instancesRep}&#34;&#34;&#34;,
+            (good, returnCode, stdOut, stdErr) = runx(
+                [&#34;java&#34;, &#34;-jar&#34;, jing, &#34;-t&#34;, schema, *instances],
                 workDir=None,
             )
+            console(f&#34;VALIDATION RESULT {good=} {returnCode=}&#34;)
+
             if not good:
                 if returnCode != 1:
                     severeError = True
 
             outputLines = (stdOut + stdErr).strip().split(&#34;\n&#34;)
+
+            for line in outputLines:
+                console(line)
 
         if severeError:
             return (-1, stdOut.strip().split(&#34;\n&#34;), stdErr.strip().split(&#34;\n&#34;))
@@ -1813,7 +1823,7 @@ In debug mode more information is shown on the console.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L622-L636" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L624-L638" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def help():
@@ -1854,7 +1864,7 @@ schematypens="http://relaxng.org/ns/structure/1.0"
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L872-L896" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L878-L902" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def analyser(self, baseSchema, override):
     &#34;&#34;&#34;Initializes an analyser for a schema.&#34;&#34;&#34;
@@ -1912,7 +1922,7 @@ A tuple with three elements:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L898-L939" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L904-L945" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def elements(self, baseSchema, override):
     &#34;&#34;&#34;Makes a list of elements and their properties.
@@ -1979,7 +1989,7 @@ If there was a severe error, None is returned.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L717-L752" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L719-L754" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def fromrelax(self, baseSchema, schemaOut):
     &#34;&#34;&#34;Converts a RelaxNG schema to an XSD schema.
@@ -2033,7 +2043,7 @@ RNG and XSD files of the base schema.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L670-L681" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L672-L683" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getBaseSchema(self):
     &#34;&#34;&#34;Get the base schema.
@@ -2075,7 +2085,7 @@ or complex; whether the element allows mixed content or only pure content.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L941-L988" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L947-L994" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getElementInfo(self, baseSchema, overrides, verbose=None):
     &#34;&#34;&#34;Analyse the schema and its overrides.
@@ -2135,7 +2145,7 @@ or complex; whether the element allows mixed content or only pure content.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L683-L707" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L685-L709" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getModel(self, xmlContent, modelMap):
     modelRe = self.modelRe
@@ -2179,7 +2189,7 @@ or complex; whether the element allows mixed content or only pure content.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L1063-L1126" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L1069-L1132" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def run(self):
     &#34;&#34;&#34;Run a task specified by arguments on the command-line.
@@ -2256,7 +2266,7 @@ or complex; whether the element allows mixed content or only pure content.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L709-L715" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L711-L717" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def setModes(self, debug=False, verbose=-1):
     &#34;&#34;&#34;Sets debug and verbose modes.
@@ -2290,7 +2300,7 @@ If None, the task was not carried out.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L990-L1061" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L996-L1067" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def task(self, task, *args, verbose=None):
     &#34;&#34;&#34;Implements a higher level task.
@@ -2399,7 +2409,7 @@ be valid.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L754-L870" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L756-L876" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def validate(self, mode, schema, instances, verbose=False):
     &#34;&#34;&#34;Validates an instance against a schema.
@@ -2467,16 +2477,20 @@ be valid.</p>
             console(&#34;&#34;)
 
     elif mode is True:
-        instancesRep = &#34; &#34;.join(f&#39;&#34;{instance}&#34;&#39; for instance in instances)
-        (good, returnCode, stdOut, stdErr) = run(
-            f&#34;&#34;&#34;java -jar {jing} -t &#34;{schema}&#34; {instancesRep}&#34;&#34;&#34;,
+        (good, returnCode, stdOut, stdErr) = runx(
+            [&#34;java&#34;, &#34;-jar&#34;, jing, &#34;-t&#34;, schema, *instances],
             workDir=None,
         )
+        console(f&#34;VALIDATION RESULT {good=} {returnCode=}&#34;)
+
         if not good:
             if returnCode != 1:
                 severeError = True
 
         outputLines = (stdOut + stdErr).strip().split(&#34;\n&#34;)
+
+        for line in outputLines:
+            console(line)
 
     if severeError:
         return (-1, stdOut.strip().split(&#34;\n&#34;), stdErr.strip().split(&#34;\n&#34;))
@@ -2540,7 +2554,7 @@ In debug mode more information is shown on the console.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L118-L618" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L120-L620" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class Elements(CheckImport):
     types = set(
@@ -3081,7 +3095,7 @@ first.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L276-L300" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L278-L302" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def eKey(x):
@@ -3118,7 +3132,7 @@ def eKey(x):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L514-L516" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L516-L518" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def repKind(k):
@@ -3133,7 +3147,7 @@ def repKind(k):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L510-L512" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L512-L514" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">@staticmethod
 def repMixed(m):
@@ -3163,7 +3177,7 @@ the same override).</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L159-L274" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L161-L276" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def configure(self, baseSchema, override=None, roots=None):
     &#34;&#34;&#34;Configure for an XML schema and overrides
@@ -3308,7 +3322,7 @@ If all went well, there are no such absences!</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L480-L508" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L482-L510" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getDefs(self, asTsv=False):
     &#34;&#34;&#34;Delivers the analysis results.
@@ -3367,7 +3381,7 @@ If all went well, there are no such absences!</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L302-L462" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L304-L464" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def interpret(self):
     &#34;&#34;&#34;Reads the XSD and interprets the element definitions.
@@ -3543,7 +3557,7 @@ in places where the names occur.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L518-L573" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L520-L575" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def resolve(self, definitions):
     &#34;&#34;&#34;Resolve indirections in the definitions.
@@ -3612,7 +3626,7 @@ in places where the names occur.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L575-L599" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L577-L601" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def showElems(self):
     &#34;&#34;&#34;Shows the current state of definitions.
@@ -3649,7 +3663,7 @@ in places where the names occur.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L601-L618" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L603-L620" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def showOverrides(self):
     &#34;&#34;&#34;Shows the overriding definitions.&#34;&#34;&#34;
@@ -3682,7 +3696,7 @@ extension is <code>.tsv</code>.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/0e2a8661cd1a2a78cc05d728234eec704260ba62/tff/tools/xmlschema.py#L464-L478" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/tools/xmlschema.py#L466-L480" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def writeDefs(self, outputDir):
     &#34;&#34;&#34;Writes the definitions of the elements to a file.
