--- a/tff/convert/tei.html
+++ b/tff/convert/tei.html
@@ -557,7 +557,7 @@ corpus of 14 letter by the Dutch artist Piet Mondriaan.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1-L5596" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1-L5601" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 # TEI import
@@ -4560,6 +4560,7 @@ class TEI(CheckImport):
 
             if empty:
                 lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
                 if cur[&#34;inNote&#34;]:
                     cv.feature(lastSlot, is_note=1)
             else:
@@ -4574,6 +4575,8 @@ class TEI(CheckImport):
 
         def endPage(cv, cur):
             &#34;&#34;&#34;Ends a page node.
+
+            If the page node is not linked to a slot, we insert an empty slot.
 
             Parameters
             ----------
@@ -4590,9 +4593,11 @@ class TEI(CheckImport):
             empty = len(slots) == 0
 
             if empty:
+                lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
                 if cur[&#34;inNote&#34;]:
-                    lastSlot = addEmpty(cv, cur, &#34;&#34;)
                     cv.feature(lastSlot, is_note=1)
+
             cv.terminate(cur[NODE][pageType])
             del cur[NODE][pageType]
 
@@ -6172,7 +6177,7 @@ if __name__ == &#34;__main__&#34;:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L970-L987" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L970-L987" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getRefs(tag, atts, xmlFile):
     refAtt = REFERENCING.get(tag, None)
@@ -6202,7 +6207,7 @@ if __name__ == &#34;__main__&#34;:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L5582-L5592" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L5587-L5597" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def main():
     (good, tasks, params, flags) = readArgs(
@@ -6225,7 +6230,7 @@ if __name__ == &#34;__main__&#34;:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L953-L967" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L953-L967" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def makeCssInfo():
     &#34;&#34;&#34;Make the CSS info for the style sheet.&#34;&#34;&#34;
@@ -6382,7 +6387,7 @@ and the current directory is not used to determine them.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L990-L5579" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L990-L5584" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class TEI(CheckImport):
     def __init__(
@@ -9396,6 +9401,7 @@ and the current directory is not used to determine them.</dd>
 
             if empty:
                 lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
                 if cur[&#34;inNote&#34;]:
                     cv.feature(lastSlot, is_note=1)
             else:
@@ -9410,6 +9416,8 @@ and the current directory is not used to determine them.</dd>
 
         def endPage(cv, cur):
             &#34;&#34;&#34;Ends a page node.
+
+            If the page node is not linked to a slot, we insert an empty slot.
 
             Parameters
             ----------
@@ -9426,9 +9434,11 @@ and the current directory is not used to determine them.</dd>
             empty = len(slots) == 0
 
             if empty:
+                lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
                 if cur[&#34;inNote&#34;]:
-                    lastSlot = addEmpty(cv, cur, &#34;&#34;)
                     cv.feature(lastSlot, is_note=1)
+
             cv.terminate(cur[NODE][pageType])
             del cur[NODE][pageType]
 
@@ -11018,7 +11028,7 @@ that code between automatic generation of files.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L5088-L5460" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L5093-L5465" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def appTask(self, tokenBased=False):
     &#34;&#34;&#34;Implementation of the &#34;app&#34; task.
@@ -11411,7 +11421,7 @@ There should be a valid TF dataset and app configuration in place</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L5464-L5500" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L5469-L5505" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def browseTask(self):
     &#34;&#34;&#34;Implementation of the &#34;browse&#34; task.
@@ -11496,7 +11506,7 @@ at your own risk.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1978-L3045" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1978-L3045" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def checkTask(self, carryon=False):
     &#34;&#34;&#34;Implementation of the &#34;check&#34; task.
@@ -12582,7 +12592,7 @@ at your own risk.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L4953-L5037" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L4958-L5042" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def convertTask(self):
     &#34;&#34;&#34;Implementation of the &#34;convert&#34; task.
@@ -12684,7 +12694,7 @@ at your own risk.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L3049-L3062" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L3049-L3062" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getConverter(self):
     &#34;&#34;&#34;Initializes a converter.
@@ -12725,7 +12735,7 @@ that has access to this data.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L3066-L4951" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L3066-L4956" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getDirector(self):
     &#34;&#34;&#34;Factory for the director function.
@@ -13663,6 +13673,7 @@ that has access to this data.</p>
 
         if empty:
             lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
             if cur[&#34;inNote&#34;]:
                 cv.feature(lastSlot, is_note=1)
         else:
@@ -13677,6 +13688,8 @@ that has access to this data.</p>
 
     def endPage(cv, cur):
         &#34;&#34;&#34;Ends a page node.
+
+        If the page node is not linked to a slot, we insert an empty slot.
 
         Parameters
         ----------
@@ -13693,9 +13706,11 @@ that has access to this data.</p>
         empty = len(slots) == 0
 
         if empty:
+            lastSlot = addEmpty(cv, cur, &#34;&#34;)
+
             if cur[&#34;inNote&#34;]:
-                lastSlot = addEmpty(cv, cur, &#34;&#34;)
                 cv.feature(lastSlot, is_note=1)
+
         cv.terminate(cur[NODE][pageType])
         del cur[NODE][pageType]
 
@@ -14629,7 +14644,7 @@ that has access to this data.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1822-L1844" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1822-L1844" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getParser(self):
     &#34;&#34;&#34;Configure the LXML parser.
@@ -14664,7 +14679,7 @@ that has access to this data.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1779-L1820" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1779-L1820" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getSwitches(self, xmlPath):
     verbose = self.verbose
@@ -14733,7 +14748,7 @@ that contains the file names in that folder, sorted.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1879-L1976" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1879-L1976" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getXML(self):
     &#34;&#34;&#34;Make an inventory of the TEI source files.
@@ -14855,7 +14870,7 @@ the results of which will be cached in the invisible <code>.tf</code> directory 
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L5039-L5084" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L5044-L5089" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def loadTask(self):
     &#34;&#34;&#34;Implementation of the &#34;load&#34; task.
@@ -14931,7 +14946,7 @@ If the parsing failed, a message is written to stderr.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1846-L1877" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1846-L1877" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def parseXML(self, fileName, fileOrText, parser):
     &#34;&#34;&#34;Parse an XML source.
@@ -14975,7 +14990,7 @@ If the parsing failed, a message is written to stderr.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L1710-L1777" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L1710-L1777" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def readSchemas(self):
     schemaDir = self.schemaDir
@@ -15087,7 +15102,7 @@ will not be executed.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/398353b12cf9ead5b4a6224e0623f8ab688f92c5/tff/convert/tei.py#L5502-L5579" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/d74e5b38be34764b6d1ef21b6da0eb01ddc4686d/tff/convert/tei.py#L5507-L5584" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def task(
     self,
